# census

./: .gitignore  .travis.yml  CITATION.cff  LICENSE  README.rst  census.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
census/: __init__.py  core.py  crosswalk.py  geo.py  math.py  states.py  tests.py
census/tests/: test_census.py
