[metadata]
name = census
version = 0.8.20
author = Jeremy Carbaugh
author_email = jcarbaugh@sunlightfoundation.com
maintainer = Forest Gregg
maintainer_email = fgregg@gmail.com
license = BSD
description = A wrapper for the US Census Bureau's API
url = http://github.com/datamade/census
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
platforms = any

[options]
py_modules = census
packages = find:
install_requires =
    requests>=1.1.0
